<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BoardGameInformationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/bt_back"
            android:background="@drawable/back"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--
            iv_boardgame
            tv_name
            tv_number_of_player_title
            tv_number_of_player
            tv_suggested_player_title
            tv_suggested_player
            tv_categories_title
            tv_categories
            tv_play_type_title
            tv_play_type
            -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:src="@drawable/vtd"
                    android:id="@+id/iv_boardgame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"/>

                <TextView
                    android:background="#66000000"
                    android:layout_alignBottom="@id/iv_boardgame"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_name"
                    android:text="name"
                    android:gravity="center_horizontal"
                    android:textSize="45sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_below="@id/iv_boardgame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.CardView
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:scaleType="centerInside"
                                android:src="@drawable/people"
                                android:layout_width="30dp"
                                android:layout_height="match_parent" />

                            <LinearLayout
                                android:paddingTop="20dp"
                                android:paddingLeft="5dp"
                                android:paddingRight="5dp"
                                android:paddingBottom="20dp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:layout_weight="3"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/tv_number_of_player_title"
                                        android:text="@string/number_of_players"
                                        android:textSize="16sp"
                                        android:textStyle="bold"/>

                                    <TextView
                                        android:id="@+id/tv_number_of_player"
                                        android:layout_weight="1"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:text="sample"
                                        android:textSize="14sp"/>

                                </LinearLayout>

                                <LinearLayout
                                    android:orientation="horizontal"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp">

                                    <TextView
                                        android:layout_weight="3"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/tv_suggested_player_title"
                                        android:text="@string/suggested_player"
                                        android:textStyle="bold"
                                        android:textSize="16sp"/>
                                    <!--android:textSize="18sp"-->
                                    <!--android:textColor="@color/black"/>-->

                                    <TextView
                                        android:layout_weight="1"
                                        android:id="@+id/tv_suggested_player"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:textSize="14sp"/>
                                    <!--android:text="sample"-->
                                    <!--android:textSize="18sp"-->
                                    <!--android:textColor="@color/black"/>-->
                                </LinearLayout>

                                <LinearLayout
                                    android:orientation="horizontal"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp">

                                    <TextView
                                        android:layout_below="@id/tv_suggested_player"
                                        android:layout_weight="3"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:id="@+id/tv_playing_time_title"
                                        android:text="@string/playing_time"
                                        android:textSize="16sp"
                                        android:textStyle="bold"/>

                                    <TextView
                                        android:id="@+id/tv_playing_time"
                                        android:layout_weight="1"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:text="sample"
                                        android:textSize="14sp"/>
                                </LinearLayout>


                            </LinearLayout>
                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_marginTop="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:scaleType="centerInside"
                                android:src="@drawable/category"
                                android:layout_width="30dp"
                                android:layout_height="match_parent" />


                            <LinearLayout
                                android:paddingTop="20dp"
                                android:paddingLeft="5dp"
                                android:paddingRight="5dp"
                                android:paddingBottom="20dp"
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp">

                                <TextView
                                    android:gravity="center_vertical"
                                    android:layout_weight="1"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:id="@+id/tv_categories_title"
                                    android:text="@string/categories"
                                    android:textSize="15sp"
                                    android:textStyle="bold"
                                    android:layout_below="@id/tv_playing_time"/>

                                <TextView
                                    android:layout_weight="1"
                                    android:id="@+id/tv_categories"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
                                    android:layout_toRightOf="@id/tv_categories_title"
                                    android:layout_alignTop="@id/tv_categories_title"
                                    android:lineSpacingExtra="10dp"
                                    android:textSize="15sp"/>
                            </LinearLayout>

                        </LinearLayout>


                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_marginTop="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:scaleType="centerInside"
                                android:src="@drawable/icon"
                                android:layout_width="30dp"
                                android:layout_height="match_parent" />


                            <LinearLayout
                                android:paddingTop="20dp"
                                android:paddingLeft="5dp"
                                android:paddingRight="5dp"
                                android:paddingBottom="20dp"
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp">

                                <TextView
                                    android:layout_weight="1"
                                    android:layout_width="0dp"
                                    android:gravity="center_vertical"
                                    android:layout_height="match_parent"
                                    android:id="@+id/tv_play_type_title"
                                    android:text="@string/play_type"
                                    android:textSize="15sp"
                                    android:textStyle="bold"
                                    android:layout_below="@id/tv_categories"/>

                                <TextView
                                    android:layout_weight="1"
                                    android:id="@+id/tv_play_type"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
                                    android:lineSpacingExtra="10dp"
                                    android:textSize="15sp"/>
                            </LinearLayout>
                        </LinearLayout>
                    </android.support.v7.widget.CardView>


                </LinearLayout>

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>
